--- a/StudentSupport/templates/home_auth/forgot_password.html
+++ b/StudentSupport/templates/home_auth/forgot_password.html
@@ -4,102 +4,141 @@
 <title>Student Support System</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-
-    <link href="https://fonts.googleapis.com/css?family=Work+Sans:100,200,300,400,500,600,700,800,900" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Fredericka+the+Great" rel="stylesheet">
       <!-- Required Fremwork -->
-    <link rel="stylesheet" type="text/css" href="{% static 'bower_components/bootstrap/New/css/bootstrap.min.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'bower_components/bootstrap/css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'assets/landing/css/custom_css/style.css' %}">
+    <link rel="stylesheet" href="{% static 'assets/icon/feather/css/feather.css' %}">
+{#    <link rel="stylesheet" type="text/css" href="{% static 'forgot_password_assets/forgot.css' %}">#}
+    <style type="text/css">
+        #wrapper {
+            background-image: url("{% static 'forgot_password_assets/background9.jpg' %}");
+            background-repeat: no-repeat;
+            background-size: 100% 100%;
+            height: 100%;
+        }
+        nav {
+            height: 10%;
+        }
 
-    <link rel="stylesheet" href="{% static 'assets/landing/css/open-iconic-bootstrap.min.css' %}">
-    <link rel="stylesheet" href="{% static 'assets/landing/css/animate.css' %}">
+        .col-form-label {
+            color: black;
+        }
 
-    <link rel="stylesheet" href="{% static 'assets/landing/css/owl.carousel.min.css' %}">
-    <link rel="stylesheet" href="{% static 'assets/landing/css/owl.theme.default.min.css' %}">
-    <link rel="stylesheet" href="{% static 'assets/landing/css/magnific-popup.css' %}">
+        .card {
+            background-color: transparent;
+            border-color: black;
+        }
 
-    <link rel="stylesheet" href="{% static 'assets/landing/css/aos.css' %}">
+        .card-header {
+            border-color: black;
+            background-color: rgba(128, 128, 128, 0.3);
+        }
 
-    <link rel="stylesheet" href="{% static 'assets/landing/css/ionicons.min.css' %}">
-    <link rel="stylesheet" href="{% static 'assets/landing/css/flaticon.css' %}">
-    <link rel="stylesheet" href="{% static 'assets/landing/css/icomoon.css' %}">
-    <link rel="stylesheet" href="{% static 'assets/landing/css/style.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'forgot_password_assets/forgot.css' %}">
+    </style>
 </head>
     
 <body>
-
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark ftco_navbar ftco-navbar-light" id="ftco-navbar">
-	    <div class="container d-flex align-items-center">
-	    	<a class="navbar-brand" href="">Student Support System</a>
-				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
-	        <span class=""></span>
-	      </button>
-	      <div class="collapse navbar-collapse" id="ftco-nav">
-	        <ul class="navbar-nav ml-auto">
-	        	<li class="nav-item active"><a href="#l" class="nav-link pl-0"></a></li>
-                <li class="nav-item"><a href="#" class="nav-link"></a></li>
-				<li class="nav-item" data-toggle="modal" data-target="#sign-up-modal"><a href="#l" class="nav-link"></a></li>
-				<li class="nav-item" data-toggle="modal" data-target="#sign-in-modal"><a href="#l" class="nav-link"></a></li>
-	        </ul>
-	      </div>
-	    </div>
-	  </nav>
-
-    <div class="body">
-        <div class="container-fluid title">
-            <div class="d-flex flex-row">
-              <div class="question"></div>
-              <div class="p-2"> </div>
-              <div class="p-2"></div>
-            </div>
+    <nav class="navbar navbar-dark bg-dark ftco_navbar ftco-navbar-light" id="ftco-navbar">
+        <div class="container d-flex align-items-center">
+            <a class="navbar-brand" href="{% url 'home' %}">Student Support System</a>
         </div>
-    
-    
-        <div class="container example2">
-        <form name="ChangePassword" onsubmit="return validate()" method="post">
-            {% csrf_token %}
-            <b>  <p>Enter new password</p></b> 
-        <input type="password" id="pwd" class="txtbox" required> 
-            <p id="password" class="alert"></p>
-        
-        <b>  <p>Confirm password</p>  </b> 
-        <input type="password" id="pwd1" class="txtbox" required>
-            <p id="password1" class="alert"></p>
-    
-        <div class="d-flex justify-content-between mb-3" style="margin-top: 3%;">
-            <div class="p-2"><button type="submit" class="btn btn-secondary"> <b> Change Password</b></button></div>
-            <div class="p-2"></div>
-            <div class="p-2" style="padding-right: 0;"><button type="button" class="btn btn-secondary"> <b>Cancle</b> </button></div>
-        </div>
-        </form>
+    </nav>
+    <div id="wrapper">
+        <div class="col-md-6 offset-md-3" id="tranparent" style="padding-top: 6%">
+
+                    <!-- form card change password -->
+                    <div class="card card-outline-secondary">
+                        <div class="card-header">
+                            <h3 class="mb-0">Change Password</h3>
+                        </div>
+                        <div class="card-body">
+                            <form class="form" role="form" action="{% url 'change_password' %}" method="post">
+                                <div class="form-group" id="password-div">
+                                    <label class="col-form-label" for="password">New Password</label>
+                                    <input type="password" class="form-control" minlength="6" maxlength="16" id="password" name="password" onblur="validate_pwd()" required="">
+                                    <div id="Error_pwd" style="color: red; display: none"></div>
+                                </div>
+                                <div class="form-group" id="cnfrmpassword-div">
+                                    <label class="col-form-label" for="cnfrmpassword">Confirm Password</label>
+                                    <input type="password" class="form-control" minlength="6" maxlength="16" id="cnfrmpassword" name="cnfrmpassword" oninput="match_password()" required="">
+                                    <div id="Error_cnfrmpwd" style="color: red; display: none"></div>
+                                </div>
+                                <div class="form-group d-flex justify-content-center">
+                                    <button type="submit" id="button-submit" class="btn btn-lg btn-block btn-disabled" disabled>
+                                        <i class="feather icon-check"></i> Confirm
+                                    </button>
+                                </div>
+                            </form>
+                        </div>
+                        <div class="card-footer">
+                            <div class="row d-flex justify-content-between">
+                                <p class="text" style="padding: .5rem .75rem; color: black">Thank You.!</p>
+                                <a class="btn btn-link" href="{% url 'home' %}">Back to Website.</a>
+                            </div>
+                        </div>
+                    <!-- /form card change password -->
+
+                </div>
         </div>
     </div>
-    
+
+    <script type="text/javascript" src="{% static 'bower_components/jquery/js/jquery.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'bower_components/popper.js/js/popper.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'bower_components/bootstrap/js/bootstrap.min.js' %}"></script>
+
+
+    <script type="text/javascript">
+        function validate_pwd() {
+            var pwd = document.getElementById('password').value;
+            var tag = document.getElementById('Error_pwd');
+            var regularExpression = /^(?=.*\d)(?=.*[A-Z])(?=.*[a-z])(?=.*[a-zA-Z!@#$%&? "])[a-zA-Z0-9!@#$%&?]{6,16}$/;
+            if(regularExpression.test(pwd)){
+                tag.style.display = 'none';
+                document.getElementById("password").classList.remove("form-control-danger");
+                document.getElementById("password-div").classList.remove("has-danger");
+                document.getElementById("password").classList.add("form-control-success");
+                return true;
+            }
+            else {
+                tag.innerHTML = "Password must have at least one uppercase, one lowercase, one digit and one special character. Length of password is 6 to 16.";
+                tag.style.display = 'block';
+                document.getElementById("password").classList.add("form-control-danger");
+                document.getElementById("password-div").classList.add("has-danger");
+                return false;
+            }
+        }
+
+        function match_password() {
+            var pwd = document.getElementById('password').value;
+            var cnfrmpwd = document.getElementById('cnfrmpassword').value;
+            var tag = document.getElementById('Error_cnfrmpwd');
+            var btn = document.getElementById('button-submit');
+            if(pwd === cnfrmpwd){
+                tag.style.display = 'none';
+                document.getElementById('cnfrmpassword').classList.remove('form-control-danger');
+                document.getElementById('cnfrmpassword-div').classList.remove('has-danger');
+                if(validate_pwd()){
+                    btn.classList.remove('btn-disabled');
+                    btn.classList.add('btn-primary');
+                    btn.disabled = false;
+                }
+                else {
+                    btn.classList.remove('btn-primary');
+                    btn.classList.add('btn-disabled');
+                    btn.disabled = true;
+                }
+            }
+            else {
+                btn.classList.remove('btn-primary');
+                btn.classList.add('btn-disabled');
+                btn.disabled = true;
+                tag.innerHTML = "Password & Comfirm Password must be same.";
+                tag.style.display = 'block';
+                document.getElementById("cnfrmpassword").classList.add("form-control-danger");
+                document.getElementById("cnfrmpassword-div").classList.add("has-danger");
+                return false;
+            }
+        }
+</script>
 </body>
 </html>
-
-<script>
-    function validate(){
-        var pwd = document.getElementById("pwd").value;
-        
-        var pwd1 = document.getElementById("pwd1").value;
-        
-        if(pwd != pwd1){
-            document.getElementById("password1").innerHTML = "This field does not match with entered password.";
-            return false;
-        }
-        
-        var passw = /^(?=.*\d)(?=.*[A-Z])(?=.*[a-z])(?=.*[a-zA-Z!@#$%&? "])[a-zA-Z0-9!@#$%&?]{6,16}$/;
-        
-        if(!pwd.match(passw)){
-            document.getElementById("password").innerHTML = "Password must contain 6 to 16 characters, at least one capital letter, one small letter, one numeric digit, one special character.";
-            return false;
-        }
-        
-        else{
-            alert("Password changes successfully.");
-            return true;
-        }
-    }
-</script>
